--- a/myCSS.css
+++ b/myCSS.css
@@ -15,4 +15,27 @@ header {
 .meny li {
   text-align: center;
   display: inline-block;
+  padding: 0px 5px;
+}
+.meny a {
+  color: gray;
+  text-decoration: none;
+  display: inline-block;
+  padding: 5px 20px;
+}
+.thomas {
+  margin-top: 100px;
+  padding: 10px;
+}
+
+.container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.obj1 .obj3 {
+  flex: 1;
+}
+.obj2 {
+  flex: 2;
 }
