--- a/myCSS.css
+++ b/myCSS.css
@@ -7,7 +7,7 @@
 .background {
   height: 100vh;
   width: 100vw;
-  background: url('img/background.jpg');
+  background: url("img/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,7 +20,7 @@
 }
 
 div {
-  border: 3px solid black;
+  border: 1px solid black;
 }
 header {
   z-index: 1;
@@ -29,6 +29,10 @@ header {
   left: 0;
 }
 
+main {
+  width: 80%;
+  margin-left: 10%;
+}
 .meny ul {
   list-style: none;
 }
@@ -43,19 +47,23 @@ header {
   display: inline-block;
   padding: 5px 20px;
 }
-.thomas {
-  margin-top: 100px;
-  padding: 10px;
-}
-
 .container {
   margin-top: 50px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
-.obj1 .obj3 {
+.obj1 {
   flex: 1;
+  padding-top: 50px;
 }
 .obj2 {
   flex: 2;
+}
+.obj3 {
+  flex: 1;
+  padding-top: 50px;
+}
+.text {
+  margin-top: 40px;
+  text-align: center;
 }
