--- a/myCSS.css
+++ b/myCSS.css
@@ -18,7 +18,9 @@
   margin: 200px auto;
   border: none;
 }
-
+main {
+  border: 1px solid black;
+}
 div {
   border: 1px solid black;
 }
@@ -54,18 +56,27 @@ main {
 }
 .obj1 {
   flex: 1;
-  padding-top: 50px;
+  padding-top: 250px;
   text-align: center;
+  list-style-position: inside;
 }
 .obj2 {
   flex: 2;
 }
 .obj3 {
   flex: 1;
-  padding-top: 50px;
+  padding-top: 250px;
   text-align: center;
 }
 .text {
   margin-top: 40px;
+  width: 80%;
+  margin-left: 10%;
   text-align: center;
+}
+
+.maps {
+  width: 550px;
+  height: auto;
+  margin-left: 25px;
 }
