--- a/myCSS.css
+++ b/myCSS.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Roboto&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 .background {
   height: 100vh;
@@ -16,8 +17,8 @@
 
 
 .logo {
-  font-size: 2em;
-  margin: 200px auto;
+  font-size: 4em;
+  margin: 200px 20%;
   border: none;
 }
 main {
@@ -101,8 +102,7 @@ justify-content: center;
   padding-left: 40px;
   list-style-position: inside;
   line-height: 30px;
-
-
+  font-family: 'Indie Flower', cursive;
 }
 .text {
   margin-top: 40px;
