--- a/myCSS.css
+++ b/myCSS.css
@@ -1,37 +1,57 @@
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower|Roboto&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .background {
   height: 100vh;
   width: 100vw;
-  background: url("img/background.jpg");
+  /* background: url("img/altbackground.jpg");  */
+  background-image: linear-gradient(
+    to right top,
+    #e4ffe0,
+    #dbfff9,
+    #e6ffff,
+    #f7feff,
+    #ffffff
+  );
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+#books {
+  width: 200px;
+  margin: 80px auto;
+  display: block;
+}
+
 .logo {
-  font-size: 4em;
-  margin: 200px 20% 0 20%;
+  color: #35495e;
+  font-family: "Montserrat", sans-serif;
+  font-size: 5em;
+  margin: 50px 20% 0 20%;
+  text-align: center;
   border: none;
 }
 .logo--text {
   margin: 2px 20% 0 20%;
+  text-align: center;
   border: none;
   font-size: 1.2em;
   height: auto;
 }
 .logo--button {
-  margin: 20px 20% 0 20%;
+  width: 140px;
+  border-radius: 2%; 
+  margin: 20px auto;
   padding: 10px;
   font-size: 1.2em;
   background: white;
-  border: 1px solid black;
+  display: block;
 }
 
 .logo--button a {
@@ -113,7 +133,7 @@ p {
   padding-left: 40px;
   list-style-position: inside;
   line-height: 30px;
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
 }
 .text {
   margin-top: 40px;
